# jrunkening

./: .gitignore  404.html  README.md  hugo.toml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yaml  deploy.yaml
content/: _index.md
content/posts/pullback_riemannian_metric/: index.md
content/projects/diffusion/: index.md
content/projects/rivae/: index.md
content/projects/vae/: index.md
docs/: index.md
docs/posts/: index.md
docs/posts/pullback_riemannian_metric/: index.md
docs/projects/: index.md
docs/projects/diffusion/: index.md
docs/projects/rivae/: index.md
docs/projects/vae/: index.md
layouts/: baseof.html
layouts/_partials/: math.html
layouts/partials/: footer.html
posts/: index.html
posts/pullback_riemannian_metric/: index.html
projects/: index.html
projects/diffusion/: index.html
projects/rivae/: index.html
projects/rivae/assets/: mnist_latent_space.html
projects/vae/: index.html
search/: search_index.json
tags/: index.html
