[project]
name = "jrunkening"
version = "0.1.0"
description = ""
authors = [
    {name = "JingYu Ning",email = "jrunkening@noreply.localhost"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mkdocs-material (>=9.6.23,<10.0.0)",
    "mkdocs-glightbox (>=0.5.2,<0.6.0)"
    
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
